# oresat-dxwifi-software

./: .gitignore  README.md  build-deb.sh  gen.py  kill-olaf  od.yaml  oresat-dxwifi-software-server.service  oresat-mon-iface.service  oresat-vcan-iface.service  pyproject.toml  requirements.txt  setup.cfg  start-vcan  startmonitor.sh
.github/workflows/: pypi.yaml
oresat_dxwifi/: __init__.py  __main__.py
oresat_dxwifi/camera/: CMakeLists.txt  README.md  camera.py  capture.c  frame.py  interface.py
oresat_dxwifi/camera/new_capture_test/: test_capture.py
oresat_dxwifi/data/: oresat_dxwifi.dcf  oresat_dxwifi.eds
oresat_dxwifi/resources/: temperature.py
oresat_dxwifi/services/: camera.py  oresat_live.py
oresat_dxwifi/services/configs/: camera_configs.yaml
oresat_dxwifi/services/static/: TheHobbit.epub
oresat_dxwifi/templates/: oresat_live.html
oresat_dxwifi/transmission/: defaults.py  startmonitor.sh  transmission.py
oresat_dxwifi/transmission/configs/: transmission_configs.yaml
oresat_dxwifi/webpage/: oresat_live.html
